--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ margin: 222px 222px;
         <div class="right">
             <button class="btn">Call us</button>
             <button class="btn"><a id="reg" href="#" target="_blank"> sign up</a></button>
-            <button class="btn"><a id="reg" href="#" target="_blank">sign in</a></button>
+            <button class="btn"><a id="reg" href="sign in.html" target="_blank">sign in</a></button>
 
         </div>
 
